kubernetes/home/apps/networking/traefik/dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.shaklab.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: default
      services:
        - name: api@internal
          kind: TraefikService
